[package]
name = "karkinos"
version = "0.1.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
license = "AGPL-3.0+"

[dependencies]
caseless = "*"
env_logger = "*"
iron = "*"
lazy_static = "*"
log = "*"
logger = "*"
maud = { version = "*", features = ["iron"] }
maud_macros = "*"
mime = "*"
notify = "*"
persistent = "*"
pulldown-cmark = "*"
radix_trie = { git = "https://github.com/michaelsproul/rust_radix_trie.git" }
router = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
staticfile = "*"
unicode-normalization = "*"
unicode-segmentation = "*"
urlencoded = "*"
